# torchreg

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: basic.ipynb  image.ipynb  mri.ipynb
test/: test_affine.py
torchreg/: __init__.py  affine.py  metrics.py  syn.py  utils.py
