[tool.poetry]
name = 'torchreg'
version = '0.0.1'
description = 'Lightweight image registration library using PyTorch'
authors = ['codingfisch <l_fisc17@wwu.de>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/codingfisch/torchreg'
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research'
]


[tool.poetry.dependencies]
python = '^3.0'
torch = '*'
tqdm = '*'


[tool.poetry.group.test.dependencies]
pytest = '*'


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
